fix dark mode input colors

--- a/src/browser_actions/main.css
+++ b/src/browser_actions/main.css
@@ -22,12 +22,18 @@
     border-style: solid;
 }
 
+.dark-theme input:focus {
+    border: 1px solid var(--fg);
+    outline: none;
+}
+
 .body-container li:hover {
     text-shadow: -0.25px -0.25px 0 var(--fg), 0.25px 0.25px var(--fg);
 }
 
 html,
-body {
+body,
+input {
     background: var(--bg);
     color: var(--fg);
 }
@@ -97,4 +103,9 @@ body {
     border: none;
     outline: none;
     margin-left: auto;
+}
+
+input {
+    border-radius: 4px;
+    border: 1px solid var(--fg);
 }
